fix the height of curriculum videos being cut off (#18)
* fix the height of curriculum videos being cut off

* target new youtube container instead

--- a/css/earsketch/curriculum.less
+++ b/css/earsketch/curriculum.less
@@ -418,14 +418,14 @@ section[data-type="chapter"], nav[data-type="toc"], div[data-type="part"] {
   width:100%;
 }
 
-.videoblock .content { 
-  position: relative; 
+.youtube-container .content { 
+  position: relative;
+  overflow: hidden; 
   padding-bottom: 56.25%; 
   height: 0; 
-  overflow: hidden; 
 }
 
-.videoblock .content iframe, .video-container object, .video-container embed { 
+.youtube-container .content iframe, .video-container object, .video-container embed { 
   position: absolute; 
   top: 0; 
   left: 0; 
